--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <title>my page</title>
   </head>
   <body>
+    <h1>Заголовок</h1>
     <p>my first page</p>
     <link rel="stylesheet" href="/refs/style.css">
   </body>
