--- a/index1.html
+++ b/index1.html
@@ -5,8 +5,7 @@
     <title>my page</title>
   </head>
   <body>
-    <h1>Заголовок</h1>
     <p>my first page</p>
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="/style.css">
   </body>
 </html>
