--- a/index.html
+++ b/index.html
@@ -6,6 +6,8 @@
   </head>
   <body>
     <h1>Заголовок</h1>
+    <h2>Заголовок 2</h2>
+    <h3>Заголовок 3</h3>
     <p>my first page</p>
     <link rel="stylesheet" href="style.css">
   </body>
