--- a/index.html
+++ b/index.html
@@ -5,9 +5,7 @@
     <title>my page</title>
   </head>
   <body>
-    <h1>Заголовок</h1>
-    <h2>Заголовок 2</h2>
-    <h3>Заголовок 3</h3>
+    <h1>Заголовок остаточний</h1>
     <p>my first page</p>
     <link rel="stylesheet" href="style.css">
   </body>
