--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
   </head>
   <body>
     <h1>Заголовок остаточний</h1>
+    <h2>hello every one!</h2>
     <p>my first page</p>
     <link rel="stylesheet" href="style.css">
   </body>
